ChangeLog
=========

Release: 2.0.0
===============================================================================
2025-10-21 Set minimum version for MacOS to 26, because AppStore requires it.

2025-10-11 Fixed decrypting TP5 files if alternative password is needed.

2025-10-10 Fixed rotation for iOS

2025-08-29 Created installable package for MacOS.

2025-08-28 Added battery support for Linux and MacOS.

2025-08-23 Fixed sound playing for Android.

2025-08-20 Added commands ^ENC, ?ENC and ?MAC.

2025-08-16 Fixed animations for G5.

2025-08-08 Fixed compiling for Android. Works now with Qt 6.5.3.

2025-08-02 Fixed icon and bitmap drawing to show them correctly resized.
           Added support for G5 files on NetLinx.

2025-06-09 Fixed scroll areas

2025-06-08 Added G5 command ^POP.

2025-05-11 Added minimize/maximize to collapsible popups.

2025-05-04 Added animation to G5 subpages who are collapsible.

2025-05-03 Fixed bargraphs for G5 and subviews

2025-04-30 Fixed background of popups and pages for G5. Fixed subviews.

2025-04-25 Added G5 commands ^PCL, ^PCT and ^PTC.

2025-04-24 Added support for G5 gradient fill of buttons.

2025-04-21 Added support for video playing

2025-04-18 Added support for G5 dynamic images.

2025-04-15 Added support for bitmap scaling of G5 bitmaps.

2025-04-11 Added support for G5 bargraphs.

2025-04-10 Added support for G5 chameleon images and transparency detection.

2025-03-08 Added support for UTF8 with G5.

2025-03-02 Added support for G5 background images.

2025-02-23 Added support for G5 bitmaps.

2025-02-15 Added support for standard apps in Linux. Starting of apps on Android
           is supported out of the box.

2025-02-12 Added application table. Defined apps can be read.

Release: 1.4.1
===============================================================================
2024-11-12 Upgrade to support Qt6.8.0. Fixed notch detection on iOS.
           Last commit for this version. Start of implementig G5 protocol.
